# pocket-pi

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/pocket-pi/: Cargo.toml
crates/pocket-pi/examples/: chat.rs  hello.rs  plugin.rs  self_contained.rs
crates/pocket-pi/js/: agent.bundle.js  package.json  prelude.js  web-globals.js
crates/pocket-pi/js/node/: _bootstrap.js  _cjs-runtime.js  assert.js  async_hooks.js  buffer.js  child_process.js  console.js  crypto.js  diagnostics_channel.js  dns.js  events.js  fs-promises.js  fs.js  http.js  https.js  module.js  net.js  os.js  path.js  perf_hooks.js  process.js  querystring.js  readline.js  stream-promises.js  stream.js  string_decoder.js  timers.js  tls.js  tty.js  url.js  util.js  v8.js  vm.js  worker_threads.js  zlib.js
crates/pocket-pi/js/pi-full/: driver.js  ext-probe.js  host.js  persist-probe.js
crates/pocket-pi/src/: http.rs  lib.rs  node.rs  tests.rs  transpile.rs
crates/pocket-pi/src/node/: builtins.rs  mod.rs  ops.rs  resolve.rs  transform.rs
js/: build-pi-full.mjs  build.mjs  env.d.ts  package-lock.json  package.json  tsconfig.json
js/pi-full/: driver.js  entry.mjs  example-extension.ts  ext-probe.js  persist-probe.js
js/src/: anthropic-stream.js  entry.js  openai-stream.js  pi-ai-stub.js  scripted.js  stream-core.js
js/src/pi-full/: driver.ts  entry.ts  ext-probe.ts  host.ts  persist-probe.ts  undici-stub.ts
js/src/runtime/node/: _cjs-runtime.ts  async_hooks.ts  console.ts  constants.ts  crypto.ts  events.ts  fs-promises.ts  https.ts  module.ts  os.ts  path.ts  readline.ts  stream.ts  tls.ts  tty.ts  url.ts  util.ts
js/src/trimmed/: anthropic-stream.ts  entry.ts  openai-stream.ts  pi-ai-stub.ts  scripted.ts
