[package]
name = "pocket-pi"
version = "0.1.0"
description = "A QuickJS runtime that runs the pi coding-agent core with no Node and no bun, on a PocketJS-style coalesced frame scheduler"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rquickjs = { version = "0.12", features = ["full-async"] }
serde_json = "1"
ureq = { version = "2", features = ["tls"] }
log = "0.4"

# Runtime TypeScript → JavaScript for agent-authored plugins (Option A): the
# heavy "jiti + typescript" Node dependency, reimplemented as a native op.
oxc_allocator = "0.140"
oxc_parser = "0.140"
oxc_codegen = "0.140"
oxc_semantic = "0.140"
oxc_span = "0.140"
oxc_transformer = "0.140"
regex = "1"

# Gzip decode for the embedded full-pi bundle (pure-Rust backend, no C). Only
# pulled in by the `embed-full-pi` feature.
flate2 = { version = "1", default-features = false, features = ["rust_backend"], optional = true }

[features]
# Embed the full, unmodified pi-coding-agent bundle (gzip) into the binary for a
# single self-contained distributable. Off by default so dev/CI builds — which
# path-load the bundle in #[ignore] tests — don't need it built. Turning it on
# requires `node js/build-pi-full.mjs` to have produced pi-full.bundle.js.gz.
embed-full-pi = ["dep:flate2"]

[dev-dependencies]
env_logger = "0.11"
