[package]
name = "pocket-pi"
version = "0.1.0"
description = "A QuickJS runtime that runs the pi coding-agent core with no Node and no bun, on a PocketJS-style coalesced frame scheduler"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rquickjs = { version = "0.12", features = ["full-async"] }
serde_json = "1"
ureq = { version = "2", features = ["tls"] }
log = "0.4"

# Runtime TypeScript → JavaScript for agent-authored plugins (Option A): the
# heavy "jiti + typescript" Node dependency, reimplemented as a native op.
oxc_allocator = "0.140"
oxc_parser = "0.140"
oxc_codegen = "0.140"
oxc_semantic = "0.140"
oxc_span = "0.140"
oxc_transformer = "0.140"
regex = "1"

# Gzip decode for the embedded full-pi bundle (pure-Rust backend, no C).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
env_logger = "0.11"
